--- a/SEP2/src/client/view/DamageEmployee/Policies/EditPolicy/EditPolicyView.fxml
+++ b/SEP2/src/client/view/DamageEmployee/Policies/EditPolicy/EditPolicyView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.DamageEmployee.EditPolicy.EditPolicyViewController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.DamageEmployee.Policies.EditPolicy.EditPolicyViewController">
    <top>
       <VBox alignment="CENTER" prefHeight="103.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
