--- a/SEP2/src/client/view/DamageEmployee/Policies/DEPoliciesView.fxml
+++ b/SEP2/src/client/view/DamageEmployee/Policies/DEPoliciesView.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.DamageEmployee.Policies.PoliciesViewController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.DamageEmployee.Policies.DEPoliciesViewController">
    <top>
       <VBox prefHeight="93.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
