--- a/SEP2/src/client/view/Login/LoginView.fxml
+++ b/SEP2/src/client/view/Login/LoginView.fxml
@@ -9,8 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="220.0" prefWidth="386.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.Login.LoginViewController">
    <top>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Log in" BorderPane.alignment="CENTER">
          <font>
@@ -22,7 +21,7 @@
       </Text>
    </top>
    <center>
-      <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="120.0" prefWidth="386.0" BorderPane.alignment="CENTER">
+      <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="386.0" BorderPane.alignment="CENTER">
          <children>
             <TextField layoutX="148.0" layoutY="60.0" />
             <Text layoutX="56.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
