--- a/SEP2/src/client/view/Salesman/ManageCustomer/ManageCustomerView.fxml
+++ b/SEP2/src/client/view/Salesman/ManageCustomer/ManageCustomerView.fxml
@@ -33,14 +33,14 @@
             <TextField fx:id="manageCustomerCPR" layoutX="147.0" layoutY="167.0" prefHeight="25.0" prefWidth="210.0" />
             <TextField fx:id="manageCustomerHousehold" layoutX="147.0" layoutY="206.0" prefHeight="25.0" prefWidth="210.0" />
             <Button fx:id="manageCustomerSaveButton" layoutX="307.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="50.0" text="Save" />
-            <Button fx:id="manageCustomerPolicesButton" layoutX="147.0" layoutY="242.0" mnemonicParsing="false" text="Policies" />
+            <Button fx:id="manageCustomerPolicesButton" layoutX="147.0" layoutY="242.0" mnemonicParsing="false" onAction="#onPolicies" text="Policies" />
          </children>
       </Pane>
    </center>
    <bottom>
       <Pane prefHeight="72.0" prefWidth="603.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="manageCustomerBackButton" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="62.0" text="Back" />
+            <Button fx:id="manageCustomerBackButton" layoutX="14.0" layoutY="36.0" mnemonicParsing="false" onAction="#onBack" prefHeight="25.0" prefWidth="62.0" text="Back" />
          </children>
       </Pane>
    </bottom>
