--- a/SEP2/src/client/view/Salesman/Policies/PoliciesView.fxml
+++ b/SEP2/src/client/view/Salesman/Policies/PoliciesView.fxml
@@ -75,7 +75,7 @@
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="62.0" prefWidth="284.0">
                <children>
-                  <Button mnemonicParsing="false" text="Back">
+                  <Button mnemonicParsing="false" onAction="#onBack" text="Back">
                      <HBox.margin>
                         <Insets left="30.0" />
                      </HBox.margin>
@@ -84,7 +84,7 @@
             </HBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="62.0" prefWidth="316.0">
                <children>
-                  <Button mnemonicParsing="false" text="Create Damages">
+                  <Button mnemonicParsing="false" onAction="#onCreatePolicy" text="Create Policy">
                      <HBox.margin>
                         <Insets right="30.0" />
                      </HBox.margin>
