--- a/SEP2/src/client/view/DamageEmployee/CreateDamage/CreateDamageView.fxml
+++ b/SEP2/src/client/view/DamageEmployee/CreateDamage/CreateDamageView.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.DamageEmployee.CreateDamage.CreateDamageViewController">
    <top>
       <VBox prefHeight="169.0" prefWidth="600.0" BorderPane.alignment="CENTER">
@@ -36,7 +35,7 @@
                         </Label>
                         <ChoiceBox fx:id="policyType" prefWidth="150.0">
                            <HBox.margin>
-                              <Insets right="36.0" />
+                              <Insets left="9.0" right="36.0" />
                            </HBox.margin>
                         </ChoiceBox>
                      </children>
@@ -45,12 +44,32 @@
                      <children>
                         <Label text="Expenses">
                            <HBox.margin>
-                              <Insets left="160.0" right="10.0" />
+                              <Insets left="160.0" right="10.0" top="10.0" />
                            </HBox.margin>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
                         </Label>
                         <TextField fx:id="expenses">
                            <HBox.margin>
-                              <Insets left="11.0" right="25.0" />
+                              <Insets left="20.0" right="25.0" top="15.0" />
+                           </HBox.margin>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </TextField>
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Damage No.">
+                           <HBox.margin>
+                              <Insets left="160.0" top="18.0" />
+                           </HBox.margin>
+                        </Label>
+                        <TextField fx:id="DamageNoTextField">
+                           <HBox.margin>
+                              <Insets left="13.0" top="15.0" />
                            </HBox.margin>
                         </TextField>
                      </children>
