--- a/SEP2/src/client/view/Salesman/CreatePolice/CreatePoliceView.fxml
+++ b/SEP2/src/client/view/Salesman/CreatePolice/CreatePoliceView.fxml
@@ -10,12 +10,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.Salesman.CreatePolice.CreatePoliceViewController">
     <top>
         <VBox alignment="CENTER" prefHeight="103.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Edit Policy">
+                <Label text="Create Policy">
                     <font>
                         <Font size="20.0" />
                     </font>
@@ -131,7 +130,7 @@
             <children>
                 <HBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="298.0">
                     <children>
-                        <Button mnemonicParsing="false" text="Back">
+                        <Button mnemonicParsing="false" onAction="#onBack" text="Back">
                             <HBox.margin>
                                 <Insets left="10.0" />
                             </HBox.margin>
@@ -140,7 +139,7 @@
                 </HBox>
                 <HBox alignment="CENTER_RIGHT" prefHeight="56.0" prefWidth="304.0">
                     <children>
-                        <Button mnemonicParsing="false" text="Save">
+                        <Button mnemonicParsing="false" onAction="#onCreate" text="Create">
                             <HBox.margin>
                                 <Insets right="10.0" />
                             </HBox.margin>
