--- a/SEP2/src/client/view/Salesman/SalesmanView/SalesmanView.fxml
+++ b/SEP2/src/client/view/Salesman/SalesmanView/SalesmanView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.Salesman.SalesmanView.SalesmanViewController">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.Salesman.SalesmanView.SalesmanViewController">
    <top>
       <Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="47.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
