--- a/SEP2/src/client/view/Salesman/CreatePolice/CreatePoliceView.fxml
+++ b/SEP2/src/client/view/Salesman/CreatePolice/CreatePoliceView.fxml
@@ -64,6 +64,7 @@
                                 <Insets left="11.0" />
                             </HBox.margin>
                         </TextField>
+                  <Label fx:id="LabelErrorPolicyNr" textFill="RED" />
                     </children>
                 </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -78,6 +79,7 @@
                                 <Insets left="33.0" />
                             </HBox.margin>
                         </TextField>
+                  <Label fx:id="LabelErrorPrice" textFill="RED" />
                     </children>
                 </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -92,6 +94,7 @@
                                 <Insets left="1.0" />
                             </HBox.margin>
                         </TextField>
+                  <Label fx:id="LabelErrorDeductible" textFill="RED" />
                     </children>
                 </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -106,6 +109,7 @@
                                 <Insets left="8.0" />
                             </HBox.margin>
                         </TextField>
+                  <Label fx:id="LabelErrorCoverage" textFill="RED" />
                     </children>
                 </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
