--- a/SEP2/src/client/view/Manager/CreateEmployee/CreateEmployeeView.fxml
+++ b/SEP2/src/client/view/Manager/CreateEmployee/CreateEmployeeView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,7 +11,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.Manager.CreateEmployee.CreateEmployeeViewController">
    <top>
@@ -39,6 +39,7 @@
                         <Insets left="10.0" />
                      </HBox.margin>
                   </TextField>
+                  <Label fx:id="LabelErrorName" textFill="RED" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -49,11 +50,12 @@
                      </HBox.margin>
                   </Text>
                   <TextField fx:id="address" />
+                  <Label fx:id="LabelErrorAddress" textFill="RED" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ID">
+                  <Text fx:id="CPR" strokeType="OUTSIDE" strokeWidth="0.0" text="CPR">
                      <HBox.margin>
                         <Insets left="170.0" right="10.0" />
                      </HBox.margin>
@@ -63,6 +65,7 @@
                         <Insets left="30.0" />
                      </HBox.margin>
                   </TextField>
+                  <Label fx:id="LabelErrorID" textFill="RED" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -72,7 +75,7 @@
                         <Insets left="170.0" right="10.0" />
                      </HBox.margin>
                   </Text>
-                  <TextField fx:id="position" />
+                  <ChoiceBox fx:id="position" prefWidth="150.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -87,6 +90,7 @@
                         <Insets left="13.0" />
                      </HBox.margin>
                   </TextField>
+                  <Label fx:id="LabelErrorEmail" textFill="RED" />
                </children>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
@@ -101,6 +105,7 @@
                         <Insets left="7.0" />
                      </HBox.margin>
                   </TextField>
+                  <Label fx:id="LabelErrorPhone" textFill="RED" />
                </children>
             </HBox>
          </children>
