--- a/SEP2/src/client/view/Manager/ManageEmployee/ManageEmployeeView.fxml
+++ b/SEP2/src/client/view/Manager/ManageEmployee/ManageEmployeeView.fxml
@@ -40,7 +40,7 @@
         <Pane prefHeight="49.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <children>
                 <Button fx:id="backButton" layoutX="14.0" layoutY="12.0" mnemonicParsing="false" text="Back" />
-                <Button fx:id="createEmployeeButton" layoutX="481.0" layoutY="12.0" mnemonicParsing="false" text="Create employee" />
+                <Button fx:id="createEmployeeButton" layoutX="481.0" layoutY="12.0" mnemonicParsing="false" onAction="#onCreateEmployee" text="Create employee" />
             </children>
         </Pane>
     </bottom>
