--- a/SEP2/src/client/view/Manager/ManagerView/ManagerView.fxml
+++ b/SEP2/src/client/view/Manager/ManagerView/ManagerView.fxml
@@ -18,7 +18,7 @@
             <children>
                 <Button layoutX="55.0" layoutY="91.0" mnemonicParsing="false" text="Logout" />
                 <Button layoutX="82.0" layoutY="14.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="119.0" text="Manage business" />
-                <Button layoutX="218.0" layoutY="12.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="123.0" text="Manage employee" />
+                <Button layoutX="218.0" layoutY="12.0" mnemonicParsing="false" onAction="#onManageEmployee" prefHeight="57.0" prefWidth="123.0" text="Manage employee" />
             </children>
         </Pane>
     </center>
