--- a/SEP2/src/client/view/DamageEmployee/CreateDamage/CreateDamageView.fxml
+++ b/SEP2/src/client/view/DamageEmployee/CreateDamage/CreateDamageView.fxml
@@ -1,122 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.DamageEmployee.CreateDamage.CreateDamageViewController">
-   <top>
-      <VBox prefHeight="169.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="client.view.DamageEmployee.CreateDamage.CreateDamageViewController" xmlns:fx="http://javafx.com/fxml/1">
+  <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="83.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="377.0" minWidth="10.0" prefWidth="317.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints maxHeight="131.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="302.0" minHeight="10.0" prefHeight="302.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
          <children>
-            <VBox alignment="BOTTOM_CENTER" prefHeight="108.0" prefWidth="600.0">
-               <children>
-                  <Label text="Create Damage">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
-               <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="39.0" prefWidth="600.0">
-                     <children>
-                        <Label text="Policy Type">
-                           <HBox.margin>
-                              <Insets left="160.0" right="10.0" />
-                           </HBox.margin>
-                        </Label>
-                        <ChoiceBox fx:id="policyType" prefWidth="150.0">
-                           <HBox.margin>
-                              <Insets left="9.0" right="36.0" />
-                           </HBox.margin>
-                        </ChoiceBox>
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="34.0" prefWidth="600.0">
-                     <children>
-                        <Label text="Expenses">
-                           <HBox.margin>
-                              <Insets left="160.0" right="10.0" top="10.0" />
-                           </HBox.margin>
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                        </Label>
-                        <TextField fx:id="expenses">
-                           <HBox.margin>
-                              <Insets left="20.0" right="25.0" top="15.0" />
-                           </HBox.margin>
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets>
-                        </TextField>
-                     </children>
-                  </HBox>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Label text="Damage No.">
-                           <HBox.margin>
-                              <Insets left="160.0" top="18.0" />
-                           </HBox.margin>
-                        </Label>
-                        <TextField fx:id="DamageNoTextField">
-                           <HBox.margin>
-                              <Insets left="13.0" top="15.0" />
-                           </HBox.margin>
-                        </TextField>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
+            <Text layoutX="115.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Create damage">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
          </children>
-      </VBox>
-   </top>
-   <center>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="428.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      </Pane>
+      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Label text="Info">
-               <VBox.margin>
-                  <Insets left="160.0" />
-               </VBox.margin>
-            </Label>
-            <TextArea fx:id="info" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="127.0" prefWidth="296.0">
-               <VBox.margin>
-                  <Insets left="160.0" />
-               </VBox.margin>
-            </TextArea>
+            <Text layoutX="71.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Policy type" />
+            <Text layoutX="71.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Expenses" />
+            <Text layoutX="71.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Damage no." />
+            <Text layoutX="71.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Info" />
+            <TextField fx:id="expensesTextfield" layoutX="142.0" layoutY="61.0" />
+            <TextField fx:id="damageNoTextfield" layoutX="142.0" layoutY="95.0" />
+            <TextArea fx:id="infoTextArea" layoutX="71.0" layoutY="149.0" prefHeight="157.0" prefWidth="221.0" />
+            <ChoiceBox fx:id="policyDropdown" layoutX="141.0" layoutY="23.0" prefWidth="150.0" />
+            <Label fx:id="expensesLabel" layoutX="308.0" layoutY="65.0" prefHeight="17.0" prefWidth="50.0" textFill="#da1010" />
+            <Label fx:id="damageNoLabel" layoutX="308.0" layoutY="99.0" prefHeight="17.0" prefWidth="50.0" textFill="#da1010" />
          </children>
-      </VBox>
-   </center>
-   <bottom>
-      <HBox prefHeight="80.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      </Pane>
+      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="286.0">
-               <children>
-                  <Button mnemonicParsing="false" text="Back">
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
-                  </Button>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_RIGHT" prefHeight="80.0" prefWidth="313.0">
-               <children>
-                  <Button mnemonicParsing="false" text="Create">
-                     <HBox.margin>
-                        <Insets right="10.0" />
-                     </HBox.margin>
-                  </Button>
-               </children>
-            </HBox>
+            <Button fx:id="backButton" layoutX="51.0" layoutY="6.0" mnemonicParsing="false" onAction="#onBack" text="Back" />
          </children>
-      </HBox>
-   </bottom>
-</BorderPane>
+      </Pane>
+      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
+      <Pane prefHeight="200.0" prefWidth="200.0" />
+      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" />
+      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+         <children>
+            <Button fx:id="createButton" layoutX="14.0" layoutY="6.0" mnemonicParsing="false" onAction="#onCreate" text="Create" />
+         </children>
+      </Pane>
+   </children>
+</GridPane>
