--- a/SEP2/src/client/view/Manager/CreateEmployee/CreateEmployeeView.fxml
+++ b/SEP2/src/client/view/Manager/CreateEmployee/CreateEmployeeView.fxml
@@ -55,12 +55,12 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Text fx:id="CPR" strokeType="OUTSIDE" strokeWidth="0.0" text="CPR">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="CPR">
                      <HBox.margin>
                         <Insets left="170.0" right="10.0" />
                      </HBox.margin>
                   </Text>
-                  <TextField fx:id="ID">
+                  <TextField fx:id="CPR">
                      <HBox.margin>
                         <Insets left="30.0" />
                      </HBox.margin>
@@ -114,8 +114,8 @@
    <bottom>
       <Pane prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="14.0" layoutY="16.0" mnemonicParsing="false" text="Back" />
-            <Button layoutX="534.0" layoutY="16.0" mnemonicParsing="false" text="Create" />
+            <Button layoutX="14.0" layoutY="16.0" mnemonicParsing="false" onAction="#onBack" text="Back" />
+            <Button layoutX="534.0" layoutY="16.0" mnemonicParsing="false" onAction="#onCreate" text="Create" />
          </children>
       </Pane>
    </bottom>
