--- a/SEP2/src/client/view/Manager/EditEmployee/EditEmployeeView.fxml
+++ b/SEP2/src/client/view/Manager/EditEmployee/EditEmployeeView.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -11,12 +11,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.Manager.EditEmployee.EditEmployeeViewController">
     <top>
         <VBox alignment="CENTER" prefHeight="41.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Create Employee">
+                <Label text="Edit Employee">
                     <font>
                         <Font size="20.0" />
                     </font>
@@ -29,78 +28,68 @@
             <children>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name">
-                            <HBox.margin>
-                                <Insets left="170.0" right="10.0" />
-                            </HBox.margin>
-                        </Text>
-                        <TextField fx:id="name">
-                            <HBox.margin>
-                                <Insets left="10.0" />
-                            </HBox.margin>
-                        </TextField>
+                  <Pane prefHeight="43.0" prefWidth="609.0">
+                     <children>
+                              <Text layoutX="170.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+                              <TextField fx:id="name" layoutX="226.0" layoutY="9.0" />
+                        <Label fx:id="nameLabel" layoutX="392.0" layoutY="13.0" textFill="RED" />
+                     </children>
+                  </Pane>
                     </children>
                 </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Address">
-                            <HBox.margin>
-                                <Insets left="170.0" right="10.0" />
-                            </HBox.margin>
-                        </Text>
-                        <TextField fx:id="address" />
+                  <Pane prefHeight="43.0" prefWidth="744.0">
+                     <children>
+                              <Text layoutX="170.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
+                              <TextField fx:id="address" layoutX="226.0" layoutY="9.0" />
+                        <Label fx:id="addressLabel" layoutX="391.0" layoutY="13.0" textFill="RED" />
+                     </children>
+                  </Pane>
                     </children>
                 </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ID">
-                            <HBox.margin>
-                                <Insets left="170.0" right="10.0" />
-                            </HBox.margin>
-                        </Text>
-                        <TextField fx:id="ID">
-                            <HBox.margin>
-                                <Insets left="30.0" />
-                            </HBox.margin>
-                        </TextField>
+                  <Pane prefHeight="43.0" prefWidth="602.0">
+                     <children>
+                              <Text layoutX="171.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPR" />
+                              <TextField fx:id="CPR" layoutX="226.0" layoutY="9.0" />
+                        <Label fx:id="idLabel" layoutX="392.0" layoutY="13.0" textFill="RED" />
+                     </children>
+                  </Pane>
                     </children>
                 </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Position">
-                            <HBox.margin>
-                                <Insets left="170.0" right="10.0" />
-                            </HBox.margin>
-                        </Text>
-                        <TextField fx:id="position" />
+                  <Pane prefHeight="43.0" prefWidth="676.0">
+                     <children>
+                              <Text layoutX="170.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Position" />
+                        <Label fx:id="positionLabel" layoutX="391.0" layoutY="13.0" textFill="RED" />
+                        <ChoiceBox fx:id="position" layoutX="225.0" layoutY="9.0" prefWidth="150.0" />
+                     </children>
+                  </Pane>
                     </children>
                 </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
-                            <HBox.margin>
-                                <Insets left="170.0" right="10.0" />
-                            </HBox.margin>
-                        </Text>
-                        <TextField fx:id="email">
-                            <HBox.margin>
-                                <Insets left="13.0" />
-                            </HBox.margin>
-                        </TextField>
+                  <Pane prefHeight="43.0" prefWidth="747.0">
+                     <children>
+                              <Text layoutX="170.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
+                              <TextField fx:id="email" layoutX="226.0" layoutY="9.0" />
+                        <Label fx:id="emailLabel" layoutX="391.0" layoutY="13.0" textFill="RED" />
+                     </children>
+                  </Pane>
                     </children>
                 </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Phone">
-                            <HBox.margin>
-                                <Insets left="170.0" right="10.0" />
-                            </HBox.margin>
-                        </Text>
-                        <TextField fx:id="phone">
-                            <HBox.margin>
-                                <Insets left="7.0" />
-                            </HBox.margin>
-                        </TextField>
+                  <Pane prefHeight="43.0" prefWidth="903.0">
+                     <children>
+                              <Text layoutX="171.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone" />
+                              <TextField fx:id="phone" layoutX="226.0" layoutY="9.0" />
+                        <Label fx:id="phoneLabel" layoutX="391.0" layoutY="13.0" textFill="RED" />
+                     </children>
+                  </Pane>
                     </children>
                 </HBox>
             </children>
@@ -110,7 +99,7 @@
         <Pane prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <children>
                 <Button layoutX="14.0" layoutY="16.0" mnemonicParsing="false" text="Back" />
-                <Button layoutX="534.0" layoutY="16.0" mnemonicParsing="false" text="Create" />
+                <Button layoutX="534.0" layoutY="16.0" mnemonicParsing="false" text="Save" />
             </children>
         </Pane>
     </bottom>
