--- a/SEP2/src/client/view/Manager/ManageEmployee/ManageEmployeeView.fxml
+++ b/SEP2/src/client/view/Manager/ManageEmployee/ManageEmployeeView.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -25,14 +24,7 @@
                 <Button fx:id="searchButton" layoutX="443.0" layoutY="14.0" mnemonicParsing="false" text="Search" />
                 <Button fx:id="selectButton" layoutX="525.0" layoutY="265.0" mnemonicParsing="false" onAction="#onSelectEmployee" text="Select" />
                 <Button fx:id="deleteButton" layoutX="458.0" layoutY="265.0" mnemonicParsing="false" text="Delete" />
-            <TableView fx:id="employeeTableView" layoutX="34.0" layoutY="52.0" prefHeight="200.0" prefWidth="533.0">
-              <columns>
-                <TableColumn fx:id="ColumnName" prefWidth="191.0" text="Name" />
-                <TableColumn fx:id="ColumnAddress" prefWidth="200.0" text="Address" />
-                  <TableColumn fx:id="ColumnCPR" prefWidth="44.0" text="CPR" />
-                  <TableColumn fx:id="ColumnPosition" prefWidth="97.0" text="Position" />
-              </columns>
-            </TableView>
+            <TableView fx:id="employeeTableView" layoutX="34.0" layoutY="52.0" prefHeight="200.0" prefWidth="533.0" />
             </children>
         </Pane>
     </center>
