--- a/SEP2/src/client/view/DamageEmployee/DEMain/DEMainView.fxml
+++ b/SEP2/src/client/view/DamageEmployee/DEMain/DEMainView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -51,13 +50,7 @@
    <center>
       <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="285.0" prefWidth="577.0" BorderPane.alignment="TOP_CENTER">
          <children>
-            <TableView fx:id="view" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="227.0" prefWidth="477.0">
-              <columns>
-                <TableColumn prefWidth="169.0" text="Name" />
-                <TableColumn prefWidth="196.0" text="Address" />
-                  <TableColumn prefWidth="111.0" text="CPR" />
-              </columns>
-            </TableView>
+            <TableView fx:id="view" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="227.0" prefWidth="477.0" />
             <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="577.0">
                <children>
                   <VBox alignment="CENTER_LEFT" prefHeight="30.0" prefWidth="242.0">
@@ -70,7 +63,7 @@
                         <Insets right="49.0" />
                      </HBox.margin>
                      <children>
-                        <Button mnemonicParsing="false" text="Select" />
+                        <Button mnemonicParsing="false" onAction="#onSelect" text="Select" />
                      </children>
                   </VBox>
                </children>
