--- a/SEP2/src/client/view/Salesman/Policies/PoliciesView.fxml
+++ b/SEP2/src/client/view/Salesman/Policies/PoliciesView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -43,14 +42,7 @@
          <children>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <TableView fx:id="tableview" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="200.0" prefWidth="540.0">
-                    <columns>
-                      <TableColumn prefWidth="85.0" text="Policy Nr" />
-                      <TableColumn prefWidth="153.0" text="Policy Name" />
-                        <TableColumn prefWidth="151.0" text="Start" />
-                        <TableColumn prefWidth="150.0" text="End" />
-                    </columns>
-                  </TableView>
+                  <TableView fx:id="tableview" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="200.0" prefWidth="540.0" />
                </children>
             </VBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="600.0">
