--- a/SEP2/src/client/view/DamageEmployee/Policies/EditPolicy/EditPolicyView.fxml
+++ b/SEP2/src/client/view/DamageEmployee/Policies/EditPolicy/EditPolicyView.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.DamageEmployee.Policies.EditPolicy.EditPolicyViewController">
    <top>
       <VBox alignment="CENTER" prefHeight="103.0" prefWidth="600.0" BorderPane.alignment="CENTER">
@@ -131,7 +130,7 @@
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="298.0">
                <children>
-                  <Button mnemonicParsing="false" text="Back">
+                  <Button mnemonicParsing="false" onAction="#onBack" text="Back">
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin>
