--- a/SEP2/src/client/view/Manager/ManageEmployee/ManageEmployeeView.fxml
+++ b/SEP2/src/client/view/Manager/ManageEmployee/ManageEmployeeView.fxml
@@ -23,7 +23,7 @@
                 <TextField fx:id="searchTextField" layoutX="231.0" layoutY="14.0" prefHeight="25.0" prefWidth="203.0" promptText="By employee ID" />
                 <Button fx:id="searchButton" layoutX="443.0" layoutY="14.0" mnemonicParsing="false" text="Search" />
                 <Button fx:id="selectButton" layoutX="525.0" layoutY="265.0" mnemonicParsing="false" onAction="#onSelectEmployee" text="Select" />
-                <Button fx:id="deleteButton" layoutX="458.0" layoutY="265.0" mnemonicParsing="false" text="Delete" />
+                <Button fx:id="deleteButton" layoutX="458.0" layoutY="265.0" mnemonicParsing="false" onAction="#onDelete" text="Delete" />
             <TableView fx:id="employeeTableView" layoutX="34.0" layoutY="52.0" prefHeight="200.0" prefWidth="533.0" />
             </children>
         </Pane>
