--- a/SEP2/src/client/view/DamageEmployee/CreateDamage/CreateDamageView.fxml
+++ b/SEP2/src/client/view/DamageEmployee/CreateDamage/CreateDamageView.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="client.view.DamageEmployee.CreateDamage.CreateDamageViewController" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.DamageEmployee.CreateDamage.CreateDamageViewController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="83.0" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="377.0" minWidth="10.0" prefWidth="317.0" />
@@ -37,10 +37,8 @@
          <children>
             <Text layoutX="71.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Policy type" />
             <Text layoutX="71.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Expenses" />
-            <Text layoutX="71.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Damage no." />
             <Text layoutX="71.0" layoutY="145.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Info" />
             <TextField fx:id="expensesTextfield" layoutX="142.0" layoutY="61.0" />
-            <TextField fx:id="damageNoTextfield" layoutX="142.0" layoutY="95.0" />
             <TextArea fx:id="infoTextArea" layoutX="71.0" layoutY="149.0" prefHeight="157.0" prefWidth="221.0" />
             <ChoiceBox fx:id="policyDropdown" layoutX="141.0" layoutY="23.0" prefWidth="150.0" />
             <Label fx:id="expensesLabel" layoutX="308.0" layoutY="65.0" prefHeight="17.0" prefWidth="50.0" textFill="#da1010" />
