--- a/SEP2/src/client/view/DamageEmployee/Policies/DEPoliciesView.fxml
+++ b/SEP2/src/client/view/DamageEmployee/Policies/DEPoliciesView.fxml
@@ -74,15 +74,7 @@
                   </Button>
                </children>
             </HBox>
-            <HBox alignment="CENTER_RIGHT" prefHeight="62.0" prefWidth="316.0">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#onCreateDamage" text="Create Damages">
-                     <HBox.margin>
-                        <Insets right="30.0" />
-                     </HBox.margin>
-                  </Button>
-               </children>
-            </HBox>
+            <HBox alignment="CENTER_RIGHT" prefHeight="62.0" prefWidth="316.0" />
          </children>
       </HBox>
    </bottom>
