--- a/SEP2/src/client/view/Salesman/SEditPolicy/SEditPoliceView.fxml
+++ b/SEP2/src/client/view/Salesman/SEditPolicy/SEditPoliceView.fxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.view.Salesman.SEditPolicy.SEditPolicyViewController">
     <top>
         <VBox alignment="CENTER" prefHeight="103.0" prefWidth="600.0" BorderPane.alignment="CENTER">
@@ -47,20 +52,7 @@
     <center>
         <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="245.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <children>
-                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-                    <children>
-                        <Label text="Policy Nr">
-                            <HBox.margin>
-                                <Insets left="160.0" right="10.0" />
-                            </HBox.margin>
-                        </Label>
-                        <TextField fx:id="policyNr">
-                            <HBox.margin>
-                                <Insets left="11.0" />
-                            </HBox.margin>
-                        </TextField>
-                    </children>
-                </HBox>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" />
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                     <children>
                         <Label text="Price">
@@ -103,20 +95,7 @@
                         </TextField>
                     </children>
                 </HBox>
-                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-                    <children>
-                        <Label text="Customer">
-                            <HBox.margin>
-                                <Insets left="160.0" right="10.0" />
-                            </HBox.margin>
-                        </Label>
-                        <TextField fx:id="Customer">
-                            <HBox.margin>
-                                <Insets left="7.0" />
-                            </HBox.margin>
-                        </TextField>
-                    </children>
-                </HBox>
+                <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" />
             </children>
         </VBox>
     </center>
