--- a/SEP2/src/client/view/Manager/EditEmployee/EditEmployeeView.fxml
+++ b/SEP2/src/client/view/Manager/EditEmployee/EditEmployeeView.fxml
@@ -99,7 +99,7 @@
         <Pane prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <children>
                 <Button layoutX="14.0" layoutY="16.0" mnemonicParsing="false" onAction="#onBack" text="Back" />
-                <Button layoutX="534.0" layoutY="16.0" mnemonicParsing="false" text="Save" />
+                <Button layoutX="534.0" layoutY="16.0" mnemonicParsing="false" onAction="#onSave" text="Save" />
             </children>
         </Pane>
     </bottom>
