--- a/SEP2/src/client/view/Manager/EditEmployee/EditEmployeeView.fxml
+++ b/SEP2/src/client/view/Manager/EditEmployee/EditEmployeeView.fxml
@@ -54,7 +54,7 @@
                      <children>
                               <Text layoutX="171.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPR" />
                               <TextField fx:id="CPR" layoutX="226.0" layoutY="9.0" />
-                        <Label fx:id="idLabel" layoutX="392.0" layoutY="13.0" textFill="RED" />
+                        <Label fx:id="idLabel" layoutX="392.0" layoutY="13.0" prefHeight="17.0" prefWidth="135.0" textFill="RED" />
                      </children>
                   </Pane>
                     </children>
