--- a/SEP2/src/client/view/Manager/ManageEmployee/ManageEmployeeView.fxml
+++ b/SEP2/src/client/view/Manager/ManageEmployee/ManageEmployeeView.fxml
@@ -31,7 +31,7 @@
     <bottom>
         <Pane prefHeight="49.0" prefWidth="600.0" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="backButton" layoutX="14.0" layoutY="12.0" mnemonicParsing="false" text="Back" />
+                <Button fx:id="backButton" layoutX="14.0" layoutY="12.0" mnemonicParsing="false" onAction="#onBack" text="Back" />
                 <Button fx:id="createEmployeeButton" layoutX="481.0" layoutY="12.0" mnemonicParsing="false" onAction="#onCreateEmployee" text="Create employee" />
             </children>
         </Pane>
